Fix alignement of loader

--- a/app/assets/scss/components/_loader.scss
+++ b/app/assets/scss/components/_loader.scss
@@ -28,8 +28,8 @@
 .loader__spin:after{
   content: "";
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: -50px;
+  left: -50px;
   width: 100px;
   height: 100px;
   border-radius: 100%;
